--- a/src/components/layout/Card.css
+++ b/src/components/layout/Card.css
@@ -1,17 +1,22 @@
 .card {
-    background-color: red;
-    border: 3px solid red;
-    border-radius: 10px;
-    overflow: hidden;
-    margin: 10px;
+  background-color: red;
+  border: 3px solid red;
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
+  max-width: 300px;
 }
 .card .title {
-    padding: 5px 0;
-    display: flex;
-    justify-content: center;
+  padding: 5px 0;
+  display: flex;
+  justify-content: center;
 }
 .card .content {
-    background-color: #fff;
-    color: #000;
-    padding: 10px;
+  background-color: #fff;
+  color: #000;
+  padding: 10px;
+  flex: 1;
 }
