--- a/src/components/layout/Card.css
+++ b/src/components/layout/Card.css
@@ -1,13 +1,12 @@
 .card {
-  background-color: red;
-  border: 3px solid red;
+  border: 3px solid;
   border-radius: 10px;
   overflow: hidden;
   margin: 10px;
   display: flex;
   flex-direction: column;
-  min-width: 300px;
-  max-width: 300px;
+  min-width: 500px;
+  max-width: 500px;
 }
 .card .title {
   padding: 5px 0;
